...
            },
        icon: const Icon(Icons.arrow_back),
        tooltip: TideLocalizations.of(context)!.goBack,
      );
    } else {
      return IconButton(
        key: const Key('tide_app_bar_about_button'),
        onPressed: () => aboutApp(context),
        icon: TideTheme.getLogoImage(imageProvider: TideTheme.logo),
        tooltip: TideLocalizations.of(context)!.appName,
      );
    }
  }
...
