...
        color: Colors.white,
        child: SizedBox(
          key: const Key('about_dialog_app_icon_sized_box'),
          width: 60,
          height: 60,
          child: TideTheme.getLogoImage(
            key: const Key('about_dialog_app_icon'),
          ),
        ),
      ),
    ),
    applicationVersion: appVersion,
    applicationLegalese: '\u{a9} ${yearFormatter.format(DateTime.now())} Tide',
...
