...
                            BuildContext context,
                            final double scale,
                            final Animation<double> animation,
                          ) {
                            return RoundButton(
                              key: const Key(
                                  'tide_home_start_button_round_button'),
                              clipOvalKey:
                                  const Key('tide_home_start_button_clip_oval'),
                              materialKey:
                                  const Key('tide_home_start_button_material'),
                              inkWellKey:
                                  const Key('tide_home_start_button_ink_well'),
...
